Add information section with HTML and CSS styling

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="container">
+        
         <nav class="navbar">
             <div class="logo">
                 <span>Header Logo</span>
@@ -30,6 +31,30 @@
             </div>
             <div class="img-place">
                 <img src="./images/imgplace.png" alt="">
+            </div>
+        </div>
+
+        <div class="info-section">
+            <div>
+                <span class="rndtext">Some random information.</span>
+            </div> 
+            <div class="info-content">
+                <div class="rndboxes">
+                    <div class="infobox"></div>
+                    <span class="boxdesc">this is some subtext under an illustration or image</span>
+                </div>
+                <div class="rndboxes">
+                    <div class="infobox"></div>
+                    <span class="boxdesc">this is some subtext under an illustration or image</span>
+                </div>
+                <div class="rndboxes">
+                    <div class="infobox"></div>
+                    <span class="boxdesc">this is some subtext under an illustration or image</span>
+                </div>
+                <div class="rndboxes">
+                    <div class="infobox"></div>
+                    <span class="boxdesc">this is some subtext under an illustration or image</span>
+                </div>
             </div>
         </div>
     </div>    
