Add SignUp section with footer

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Odin Landing P</title>
+    <title>Odin Landing Page</title>
 </head>
 
 <body>
     <div class="container">
-        
+
         <nav class="navbar">
             <div class="logo">
                 <span>Header Logo</span>
@@ -23,10 +24,12 @@
                 <a href="">Header link three</a>
             </div>
         </nav>
+
         <div class="header-content">
             <div class="header-text">
                 <h1>This website is awesome!</h1>
-                <p>This website has some subtext that goes under the main title.  <br> It's a smaller font and the color is lower contrast.</p>
+                <p>This website has some subtext that goes under the main title. <br> It's a smaller font and the color
+                    is lower contrast.</p>
                 <button class="sign-up">Sign Up</button>
             </div>
             <div class="img-place">
@@ -37,7 +40,7 @@
         <div class="info-section">
             <div>
                 <span class="rndtext">Some random information.</span>
-            </div> 
+            </div>
             <div class="info-content">
                 <div class="rndboxes">
                     <div class="infobox"></div>
@@ -57,7 +60,34 @@
                 </div>
             </div>
         </div>
-    </div>    
+
+        <div class="quote-section">
+            <div class="quote-text">
+                <p>"This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
+                    maybe people will actually read it. Who knows? All I know is that it looks nice"</p>
+            </div>
+            <div class="quote-signature">
+                <p class="signature">-Thor, God of thunder</p>
+            </div>
+        </div>
+
+        <div class="signup-section">
+            <div class="call-for-action">
+                <div class="signup-text">
+                    <p class="herotext"><span class="bigtext">Call for action! It's time!</span> <br> Sign up for our
+                        product by clicking that button right over there!</p>
+                </div>
+                <div class="signup-button">
+                    <button class="button">Sign Up</button>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <p class="footext">Copyright &copy; The Odin Project 2021</p>
+        </footer>
+    </div>
+    </div>
 </body>
 
 </html>
